@@ -44,6 +44,7 @@ Star Wars 20th Anniversary 1.06
 Tommy 5.00 (unofficial MOD)
 
 Clones:
+ABC Monday Night Football (2.9, 50cts)
 Laser Cue L-3 (Neverending Bell Fix)
 Lost in Space 1.01 French
 Stargate rev.5
